Small test fix: